--- a/docs/reference/config.toml
+++ b/docs/reference/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/node-mongodb-native/steverenaker/DOCS-8756"
+baseurl = "."
 languageCode = "en-us"
 title = "MongoDB Node.js Driver"
 theme = "mongodb"
