--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "betterbenchmarks": "^0.1.0",
     "bluebird": "3.4.6",
     "bson": "latest",
+    "cheerio": "^1.0.0-rc.2",
     "cli-table": "^0.3.1",
     "co": "4.6.0",
     "colors": "^1.1.2",
@@ -31,6 +32,7 @@
     "gleak": "0.5.0",
     "integra": "0.1.8",
     "jsdoc": "3.4.0",
+    "jsdoc-dash-template": "^2.0.1",
     "ldjson-stream": "^1.2.1",
     "mongodb-extended-json": "1.7.1",
     "mongodb-topology-manager": "1.0.x",
@@ -39,6 +41,7 @@
     "optimist": "0.6.1",
     "rimraf": "2.5.4",
     "semver": "5.3.0",
+    "sqlite3": "^3.1.13",
     "worker-farm": "^1.3.1"
   },
   "author": "Christian Kvalheim",
